# aguirre

./: .gitignore  Makefile  README.md  poc-ephemerun.py  poc-ephemerun.sh  pyproject.toml  setup.cfg
aguirre/: util.py
aguirre/integrations/: django.py
tests/: test_integrations_flask.py  test_integrations_quart.py  test_util.py
tests/examples/: vanjs-core-1.5.0.tgz
