# vim:ft=dosini:

[metadata]
name = aguirre
version = attr:aguirre.__version__
url = https://github.com/pscl4rke/aguirre
project_urls = 
    Source Code = https://github.com/pscl4rke/aguirre
    Issues = https://github.com/pscl4rke/aguirre/issues
description = Proof-of-concept for Python webservers to host Javascript assets
long_description = file:README.md
long_description_content_type = text/markdown
author = P. S. Clarke
author_email = aguirre@pscl4rke.net
classifiers =
    Development Status :: 4 - Beta

[options]
packages =
    aguirre

[tool:check-wheel-contents]
package = aguirre
